apps/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: homeassistant
      port:
        number: 80
  tls:
  - hosts:
    - homeassistant
